[package]
name = "network_cover_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.45", features = ["csv", "strings"] }
geo = "0.33"
geo-types = "0.7"
wkt = "0.14"
rstar = "0.12"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"
toml = "0.8"
postgres = "0.19"
